Fix alignment issues of header search bar on windows

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -22,7 +22,7 @@
 }
 
 .search-bar {
-    display: flex;
+    display: block;
     width: 450px;
     height: 50px;
     padding: 0px 15px;
@@ -42,7 +42,8 @@
     font-size: 18px;
     font-family: 'Nunito';
     border: none;
-    width: 450px;
+    width: 200px;
+    margin-top: 10px;
 }
 
 .search-bar input:focus {
@@ -51,8 +52,8 @@
 }
 
 .search-bar img {
-    position: relative;
-    left: -100px;
+    float: right;
+    margin: 15px;
 }
 
 .notif {
